--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="google-site-verification" content="NpXB3YcGtG7e13psj0Z_R3zmr6wlrBHZrkSKJuGXouw" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, username, generator, reddit, random, user, name, generate, screen, screenname, login, profile, list, unique" />
 		<link
 			href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
 			rel="stylesheet"
