save fav usernames

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="google-site-verification" content="NpXB3YcGtG7e13psj0Z_R3zmr6wlrBHZrkSKJuGXouw" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, username, generator, reddit, random, user, name, generate, screen, screenname, login, profile, list, unique" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link
 			href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
 			rel="stylesheet"
@@ -43,10 +43,16 @@
 					</div>
 				</div>
 				<button id="generateButton">
-					Click to Generate a Username
+					Generate Username
+				</button>
+				<button id="saveUsernameButton">
+					Save Username
 				</button>
 				<span id="generatedWord" class="generated-word"></span>
 			</form>
+			<div id="saved-usernames">
+
+			</div>
 		</div>
 	</body>
 </html>
